Removed right padding on breadcrumbs when the page has js
The padding on the right side was added for the sticky sharebar on pages with JS enabled. However this is no longer applicable to the new breadcrumbs and causes alignment issues. It has been commented out

--- a/libs/modules/breadcrumb.less
+++ b/libs/modules/breadcrumb.less
@@ -57,11 +57,11 @@
     color: @text-color;
 }
 
-@media (max-width: @max-page-width-before-the-share-bar-ruins-it-all) and (min-width: @screen-sm-min) {
+/*@media (max-width: @max-page-width-before-the-share-bar-ruins-it-all) and (min-width: @screen-sm-min) {
     .js .main-breadcrumb {
         padding-right: @box-spacing-horizontal*3.5;
     }
-}
+}*/
 
 // .breadcrumb is a generic class for displaying breadcrumbs
 .breadcrumb__item {
