fix: Removed whitespace:nowrap from sharing links, as it was causing the page to scroll horizontally
For some reason nowrap was breaking everything, so switched the a to inline-block, which seems to be a safer bet

--- a/libs/modules/main-content.less
+++ b/libs/modules/main-content.less
@@ -27,7 +27,7 @@
         border-bottom: transparent;
         margin-right: 1rem;
         padding: 0.25rem;
-        white-space: nowrap;
+        display: inline-block;
         &:hover,
         &:focus {
             color: @link-hover-color;
