--- a/libs/modules/adviser.less
+++ b/libs/modules/adviser.less
@@ -19,19 +19,22 @@ span[id*="overlay_button"] {
 
 .callout--adviser,
 .dap-panel--adviser {
-    border-width: 1px;
     .callout(
         lighten(@inventive-teal-lightest, 9%),
         @text-color,
         @callout-border: @inventive-teal-light
     );
-    .callout--icon("Adviser");
     &:before {
-        color: @inventive-teal;
+        content: "adviser";
+        text-transform: uppercase;
         font-weight: @font-weight-bolder;
-        font-size: @font-size-base;
-        background-color: lighten(@inventive-teal-lightest, 9%);
-        padding: .75rem 0 0 1rem;
+        font-size: .75rem;
+        position: relative;
+        margin-bottom: .5rem;
+        display: inline-block;
+        background-color: @inventive-teal;
+        color: @white;
+        padding: .3em .5em;
     }
 }
 
