dev: Updated AO revealables to match adviser styles more closely
Removed the heavy left border that was associated with the callout and changed the adviser label at the top of revealable content to match the new badge style

--- a/libs/modules/adviser.less
+++ b/libs/modules/adviser.less
@@ -124,12 +124,17 @@ a.adviser-only { // Styles for adding A icon to sidebar links
         @border: @inventive-teal-light;
         @icon: @inventive-teal-light;
     );
-    border-width: 1px 1px 0px 0.5rem;
+    border-width: 1px 1px 0px 1px;
     .revealable__content:before {
-        content: "Adviser";
-        display: block;
-        color: @inventive-teal;
+        content: "adviser";
+        text-transform: uppercase;
         font-weight: @font-weight-bolder;
-        margin-bottom: .75rem;
+        font-size: .75rem;
+        position: relative;
+        margin-bottom: .5rem;
+        display: inline-block;
+        background-color: @inventive-teal;
+        color: @white;
+        padding: .3em .5em;
     }
 }
