change: Changed active and hover states on adviser styles sidebars to help differentiate them

--- a/libs/modules/adviser.less
+++ b/libs/modules/adviser.less
@@ -91,14 +91,17 @@ a.adviser-only { // Styles for adding A icon to sidebar links
     }
     li {
         &:hover {
-            background-color: @inventive-teal-lightest;
+            background-color: lighten(@inventive-teal-lightest, 12%);
         }
     }
 
     a {
         color: @inventive-teal;
         &.active {
-            background-color: lighten(@inventive-teal-lightest, 9%);
+            background-color: @inventive-teal-lightest;
+            &:hover {
+                background-color: lighten(@inventive-teal-lightest, 12%);
+            }
         }
     }
 }
