add: Initial commit navigation landing pages For get advice and get involved, for users who navigate backwards through the breadcrumb and have js disabled

--- a/libs/jade/dev/site/group-reveal.jade
+++ b/libs/jade/dev/site/group-reveal.jade
@@ -7,7 +7,7 @@ extends /template/template-site.jade
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: dir + "index.html"},
+		{title: "Get Advice", href: dir + "navigation.html"},
 		{title: "Benefits"}])
 
 block content
