--- a/libs/site.less
+++ b/libs/site.less
@@ -66,7 +66,7 @@
 @import "modules/side-links";
 @import "modules/side-chat";
 @import "modules/calls-for-evidence";
-//@import "modules/search-results";
+@import "modules/search-results";
 @import "modules/cookie-monster";
 @import "modules/paragraph-numbers.less";
 //@import "modules/atoz";
@@ -85,6 +85,22 @@
 @import "modules/savebar";
 @import "modules/cards";
 @import "modules/blog";
+@import "modules/financial-statement";
+@import "modules/epi-templates";
+
+// Styles for new site styles
+@import "modules/main-nav-v1";
+@import "modules/main-nav-v2";
+@import "modules/main-nav-v3";
+@import "modules/main-nav-beta.less";
+@import "modules/home.less";
+@import "modules/landing.less";
+
+// Styles for new main navs
+@import "modules/main-nav-v1";
+@import "modules/main-nav-v2";
+@import "modules/main-nav-v3";
+@import "modules/home.less";
 
 /* IE styles */
 @import "base/ie";
