--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -14,8 +14,8 @@
     font-style: normal;
 }
 
-.icon() {
-    font-family: 'cab-icons' !important;
+.icon(@font: 'cab-icons';) {
+    font-family: @font !important;
     speak: none;
     font-style: normal;
     font-weight: normal;
@@ -173,6 +173,12 @@
     &:extend(.a-social);
     border: 0;
 }
+.a-social-copy:before {
+    content: @i-copy;
+    color: @blue-light;
+    &:extend(.a-social);
+    border: 0;
+}
 
 .a-social-top {
     .icon;
@@ -188,7 +194,6 @@
 .info-reviewed {
     border-bottom: 0;
     margin-right: .9em;
-    white-space: nowrap;
     &:before {
         content: @i-clock;
         color: @blue-light;
@@ -198,7 +203,6 @@
 .info-owner {
     border-bottom: 0;
     margin-right: .9em;
-    white-space: nowrap;
     &:before {
         content: @i-happy;
         color: @blue-light;
@@ -217,7 +221,6 @@
 .a-social-print {
     border-bottom: 0;
     margin-right: .9em;
-    white-space: nowrap;
     &:before {
         content: @i-print;
         color: @blue-light;
@@ -228,7 +231,6 @@
 .a-social-references {
     border-bottom: 0;
     margin-right: .9em;
-    white-space: nowrap;
     &:before {
         content: @i-star;
         color: @blue-light;
@@ -239,7 +241,6 @@
 .a-social-email {
     border-bottom: 0;
     margin-right: .9em;
-    white-space: nowrap;
     &:before {
         content: @i-email;
         color: @blue-light;
@@ -251,6 +252,50 @@
 // Depreciated styles, need to be fixed
 
 // For search box in header
+.icon-local {
+    &:before {
+        .icon(
+            @font: 'brand';
+        );
+        content: '\e936';
+        color: @heritage-blue-lighter;
+        font-size: @font-size-small;
+        margin: 0 .25rem;
+    }
+    li a {
+        color: @heritage-blue-lighter;
+    }
+}
+
+.icon-chat {
+    &:after {
+        .icon(
+            @font: 'brand';
+        );
+        content: '\e92b';
+        color: @heritage-blue;
+        font-size: @font-size-small;
+        margin: .35rem .35rem 0 .8rem;
+    }
+    li a {
+        color: @heritage-blue-lighter;
+    }
+}
+.icon-chat--offline {
+    &:after {
+        .icon(
+            @font: 'brand';
+        );
+        content: '\e929';
+        color: @heritage-blue;
+        font-size: @font-size-small;
+        margin: .35rem .35rem 0 .8rem;
+    }
+    li a {
+        color: @heritage-blue-lighter;
+    }
+}
+
 .icon-search:before {
     content: @i-search;
     .icon;
