--- a/libs/jade/forms/fields.jade
+++ b/libs/jade/forms/fields.jade
@@ -24,76 +24,79 @@ block content
 			h3 Examples of form components
 			p Use a field for a person’s full name if possible - different cultures structure names in different ways so Firstname, Surname isn't always appropriate.
 
+			h3 Structure
+			p For single fields use a #[span.code div] with the class #[span.code fieldset], this is a better syntax for building simpler tools and forms with a single question per page. When creating tools with multiple questions or fields, for example date or address fields.
+
 			.example-box-plain
-				fieldset
+				.fieldset
 					label(for="standardField") Standard field
 						span.optional &nbsp;(optional)
 					input#standardField(placeholder="", type="text")
 			pre
 				code.language-html
-					| &lt;fieldset&gt;
+					| &lt;div class="fieldset"&gt;
 					| 	&lt;label for="standardField"&gt;Standard field &lt;span class="optional"&gt;(optional)&lt;/span&gt;&lt;/label&gt;
 					| 	&lt;input id="standardField" placeholder="" type="text"&gt;
-					| &lt;/fieldset&gt;
+					| &lt;/div&gt;
 
 			.example-box-plain
-				fieldset
+				.fieldset
 					label(for="standardField") Standard field
 					span.form-hint With additional help text
 					input#standardField(placeholder="" type="text")
 			pre
 				code.language-html
-					| &lt;fieldset&gt;
+					| &lt;div class="fieldset"&gt;
 					| 	&lt;label for="standardField"&gt;Standard field&lt;/label&gt;
 					| 	&lt;span class="form-hint"&gt;With additional help text&lt;/span&gt;
 					| 	&lt;input id="standardField" placeholder="" type="text"&gt;
-					| &lt;/fieldset&gt;
+					| &lt;/div&gt;
 
 			.example-box-plain
-				fieldset
+				.fieldset
 					label(for="exampleInputEmail1") Inline validation error with field placeholder
 					input#exampleInputEmail1(placeholder="Email", type="email", required)
 					.invalid Please enter a valid email address
 			pre
 				code.language-html
-					| &lt;fieldset&gt;
+					| &lt;div class="fieldset"&gt;
 					| 	&lt;label for="exampleInputEmail1"&gt;Inline validation error with field placeholder&lt;/label&gt;
 					| 	&lt;input id="exampleInputEmail1" placeholder="Email" required="" type="email"&gt;
 					| 	&lt;small&gt;Information about these details.&lt;/small&gt;
 					| 	&lt;div class="invalid"&gt;Please enter a valid email address&lt;/div&gt;
-					| &lt;/fieldset&gt;
+					| &lt;/div&gt;
 
 			.example-box-plain
-				fieldset
+				.fieldset
 					label(for="exampleInputPassword1") Password
 					span.form-hint Enter at least 3 characters
 					input#exampleInputPassword1(pattern=".{3,10}", type="password", required)
 					.invalid Please enter a password between 3 and 10 characters
 			pre
 				code.language-html
-					| &lt;fieldset&gt;
+					| &lt;div class="fieldset"&gt;
 					| 	&lt;label for="exampleInputPassword1"&gt;Password&lt;/label&gt;
 					| 	&lt;span class="form-hint"&gt;Enter at least 3 characters&lt;/span&gt;
 					| 	&lt;input id="exampleInputPassword1" pattern=".{3,10}" placeholder="Password" required="" type="password"&gt;
 					| 	&lt;div class="valid"&gt;Wonderful!&lt;/div&gt;
 					| 	&lt;div class="invalid"&gt;Please enter a password between 3 and 10 characters&lt;/div&gt;
-					| &lt;/fieldset&gt;
+					| &lt;/div&gt;
 
 			.example-box-plain
-				fieldset
+				.fieldset
 					label(for="exampleInputPassword1") Disabled field
 					span.form-hint Description why this field isn't enabled
 					input#exampleInputPassword1(disabled, placeholder="Disabled field", type="password")
 			pre
 				code.language-html
-					| &lt;fieldset&gt;
+					| &lt;div class="fieldset"&gt;
 					| 	&lt;label for="exampleInputPassword1"&gt;Disabled field&lt;/label&gt;
 					| 	&lt;span class="form-hint"&gt;Description why this field isn't enabled&lt;/span&gt;
 					| 	&lt;input id="exampleInputPassword1" disabled placeholder="Disabled field" type="password"&gt;
-					| &lt;/fieldset&gt;
+					| &lt;/div&gt;
 
 			.example-box-plain
-				fieldset
+				.fieldset
 					label(for="exampleSelect1") Example dropdown select
 					.dropdown
 						select#exampleSelect1
@@ -104,7 +107,7 @@ block content
 							option 5
 			pre
 				code.language-html
-					| &lt;fieldset&gt;
+					| &lt;div class="fieldset"&gt;
 					| 	&lt;label for="exampleSelect1"&gt;Example dropdown select&lt;/label&gt;
 					| 	&lt;div class="dropdown"&gt;
 					| 		&lt;select id="exampleSelect1"&gt;
@@ -118,7 +121,7 @@ block content
 					| &lt;/fieldset&gt;
 
 			.example-box-plain
-				fieldset
+				.fieldset
 					label(for="exampleSelect2") Example dropdown multiple select
 					select#exampleSelect2.multi-select(multiple)
 						option 1
@@ -128,7 +131,7 @@ block content
 						option 5
 			pre
 				code.language-html
-					| &lt;fieldset&gt;
+					| &lt;div class="fieldset"&gt;
 					| 	&lt;label for="exampleSelect2"&gt;Example dropdown multiple select&lt;/label&gt;
 					| 	&lt;select id="exampleSelect2" multiple="" class="multi-select"&gt;
 					| 		&lt;option&gt;1&lt;/option&gt;
@@ -137,31 +140,31 @@ block content
 					| 		&lt;option&gt;4&lt;/option&gt;
 					| 		&lt;option&gt;5&lt;/option&gt;
 					| 	&lt;/select&gt;
-					| &lt;/fieldset&gt;
+					| &lt;/div&gt;
 
 			.example-box-plain
-				fieldset
+				.fieldset
 					label(for="exampleTextarea") Example textarea
 					textarea#exampleTextarea(rows="3")
 			pre
 				code.language-html
-					| &lt;fieldset&gt;
+					| &lt;div class="fieldset"&gt;
 					| 	&lt;label for="exampleTextarea"&gt;Example textarea &lt;/label&gt;
 					| 	&lt;textarea id="exampleTextarea" rows="3"&gt;&lt;/textarea&gt;
-					| &lt;/fieldset&gt;
+					| &lt;/div&gt;
 
 			.example-box-plain
-				fieldset
+				.fieldset
 					label(for="exampleInputFile") File input
 					input#exampleInputFile.form-control-file(type="file")
 					small This is some placeholder block-level help text for the above input. It's a bit lighter and easily wraps to a new line.
 			pre
 				code.language-html
-					| &lt;fieldset&gt;
+					| &lt;div class="fieldset"&gt;
 					| 	&lt;label for="exampleInputFile"&gt;File input&lt;/label&gt;
 					| 	&lt;input id="exampleInputFile" type="file" class="form-control-file"&gt;
 					| 	&lt;small&gt;This is some placeholder block-level help text for the above input. It's a bit lighter and easily wraps to a new line.&lt;/small&gt;
-					| &lt;/fieldset&gt;
+					| &lt;/div&gt;
 
 			.example-box-plain
 				fieldset
