--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -126,6 +126,8 @@ block content
 						a(href="forms/field-groups.html") Field groups
 					li
 						a(href="forms/validation.html") Form validation
+					li
+						a(href="forms/clipboard.html") Copy to clipboard
 
 			.span4-sm
 				h2#Modules Modules
