--- a/libs/template/sidebar-forms.jade
+++ b/libs/template/sidebar-forms.jade
@@ -4,5 +4,6 @@
 	{title: "Fields", href: "fields.html"},
 	{title: "Field groups", href: "field-groups.html"},
 	{title: "Conditional fields", href: "fields-conditional.html"},
-	{title: "Validation", href: "validation.html"}
+	{title: "Validation", href: "validation.html"},
+	{title: "Copy to clipboard", href: "clipboard.html"}
 ])
