fix: Spinner icon now showing on icons.jade

--- a/libs/guide.less
+++ b/libs/guide.less
@@ -1261,7 +1261,7 @@ div.tooltip:before {
     }
 
     .i-spinner .icon:before {
-        .spinner;
+        content: @i-spinner;
     }
 
     .brand-accelerator .icon-brand:before {
