fix: update navigation page

--- a/libs/jade/dev/site/navigation.jade
+++ b/libs/jade/dev/site/navigation.jade
@@ -15,7 +15,12 @@ block content
 			.col-sm-12.col-xs-12
 				.title
 					h1.title__heading.js-ref
-						span.title__title #{title}
+						span.title__title Browse or search for information
+				.field-group.field-group--buttons
+					input#field(type="search", placeholder="Search")
+					button.btn
+						i.icon-search
+
 		.flex-container.flex-row(style="padding-top: 2rem;")
 			.col-sm-12.col-xs-12
 					h2 Get advice 
@@ -56,49 +61,49 @@ block content
 					h3 #[a(href="#") Education]
 					p School and higher education, support for learning, discrimination and financial advice.
 
-	.fullwidth-yellow
-		.fullwidth-content
-			.flex-container.flex-row(style="padding-top: 2rem;")
-				.col-sm-12.col-xs-12
-						h2 Get involved 
-			.flex-container.flex-row
-				.col-sm-4.col-xs-12
-					h3 #[a(href="#") About Citizens Advice]
-					p Who we are, the history, our mission and corporate information including annual reports.
+	//.fullwidth-yellow
+	.fullwidth-content
+		.flex-container.flex-row(style="padding-top: 2rem;")
+			.col-sm-12.col-xs-12
+					h2 Get involved 
+		.flex-container.flex-row
+			.col-sm-4.col-xs-12
+				h3 #[a(href="#") About Citizens Advice]
+				p Who we are, the history, our mission and corporate information including annual reports.
 
-					h3 #[a(href="#") How Citizens Advice works]
-					p What advice we give, how we record data and how it's used. 
-					
-					h3 #[a(href="#") Contact us]
-					p There are various ways to contact us for advice and give feedback on Citizens Advice.
-					
-					h3 #[a(href="#") Our blogs]
-					p All the blogs from Citizens Advice.
-					
-				.col-sm-4.col-xs-12
-					// This is formerly Policy Research
-					h3 #[a(href="#") Policy]
-					p Research giving insights and reports on the effectiveness of policy.
+				h3 #[a(href="#") How Citizens Advice works]
+				p What advice we give, how we record data and how it's used. 
+				
+				h3 #[a(href="#") Contact us]
+				p There are various ways to contact us for advice and give feedback on Citizens Advice.
+				
+				h3 #[a(href="#") Our blogs]
+				p All the blogs from Citizens Advice.
+				
+			.col-sm-4.col-xs-12
+				// This is formerly Policy Research
+				h3 #[a(href="#") Policy]
+				p Research giving insights and reports on the effectiveness of policy.
 
-					h3 #[a(href="#") Jobs]
-					p Find out about working in the Citizens Advice network and search jobs.
-					
-					h3 #[a(href="#") Press releases]
-					p Searching press releases, media centre and contacting the news team.
-					
-					h3 #[a(href="#") The difference we make]
-					p Reports and information on how Citizens Advice has helped and social trends.
-					
-				.col-sm-4.col-xs-12
+				h3 #[a(href="#") Jobs]
+				p Find out about working in the Citizens Advice network and search jobs.
+				
+				h3 #[a(href="#") Press releases]
+				p Searching press releases, media centre and contacting the news team.
+				
+				h3 #[a(href="#") The difference we make]
+				p Reports and information on how Citizens Advice has helped and social trends.
+				
+			.col-sm-4.col-xs-12
 
-					h3 #[a(href="#") Campaigns]
-					p Our latest campaign, how to sign up and support.
-					
-					h3 #[a(href="#") Volunteer]
-					p Become a volunteer, find out how you can make a difference to people.
+				h3 #[a(href="#") Campaigns]
+				p Our latest campaign, how to sign up and support.
+				
+				h3 #[a(href="#") Volunteer]
+				p Become a volunteer, find out how you can make a difference to people.
 
-					h3 #[a(href="#") Support us]
-					p We are a charity, find out how to support us.
+				h3 #[a(href="#") Support us]
+				p We are a charity, find out how to support us.
 
-					h3 #[a(href="#") Find your local Citizens Advice]
-					p For more information and getting advice from your local Citizens Advice.
+				h3 #[a(href="#") Find your local Citizens Advice]
+				p For more information and getting advice from your local Citizens Advice.
