fix: Fixed issue causing breadcrumbs to sit 3rem left of centre

--- a/libs/modules/breadcrumb.less
+++ b/libs/modules/breadcrumb.less
@@ -58,7 +58,7 @@
 
 @media (max-width: @max-page-width-before-the-share-bar-ruins-it-all) and (min-width: @screen-sm-min) {
     .js .main-breadcrumb {
-        padding-right: @box-spacing-horizontal*3.5;
+        //padding-right: @box-spacing-horizontal*3.5;
     }
 }
 
