--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -27,6 +27,11 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+// Created a global style that can be used to wrap inline icons to give them the correct font
+.i {
+    .icon;
+}
+
 // Inline icons for use in paragraph and headings
 .inline-icon {
     .icon;
