--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -9,29 +9,27 @@ block breadcrumbs
 
 block content
 	// NEW INDEX
-	//.articleContent
+	.articleContent
 		.newrow
 			.span6-sm
 
-				h2 Getting started
+				h2(style="margin-top: 0;") Getting started
 				ul
 					li
-						a(href="principles.html") Digital principles
+						a.a-external(href="http://alphablog.citizensadvice.org.uk/2016/02/principles-for-digital/") Digital principles
 					li
-						a.a-external(href="#") cab-ui repo
-					li
-						a(href="#") Setting up your environment
-					li
-						a.a-external(href="#") Content styleguide
-					li
-						a.a-external(href="#") Brand guidelines
+						a.a-external(href="http://alphablog.citizensadvice.org.uk/") Citizens Advice Digital team blog
 			.span6-sm
-				h2 Resources
+				h2(style="margin-top: 0;") Resources
 				ul
 					li
-						a.a-external(href="#") Blog Wordpress template
+						a.a-external(href="https://github.com/citizensadvice/cab-ui") cab-ui repo
 					li
-						a.a-external(href="#") Styleguide Wordpress template
+						a.a-external(href="https://github.com/citizensadvice/cab-ui#including-in-a-project") Using cab-ui in your own project
+					//li
+						a.a-external(href="#") Content styleguide
+					//li
+						a.a-external(href="#") Brand guidelines
 
 		.newrow
 			.span8-md
@@ -39,7 +37,7 @@ block content
 				p This is a guide to demonstrate elements such as layout, typography, forms, buttons and icons.
 		.newrow
 			.span3-md.span6-sm
-				h3#Styles Styles
+				h3#Styles(style="margin-top: 0;") Styles
 				ul
 					li
 						a(href="styles/typography.html") Typography
@@ -51,72 +49,7 @@ block content
 						a(href="styles/tables.html") Tables
 
 			.span3-md.span6-sm
-				h3#Forms Forms
-				ul
-					li
-						a(href="forms/buttons.html") Buttons
-					li
-						a(href="forms/fields.html") Fields
-					li
-						a(href="forms/field-groups.html") Field groups
-					li
-						a(href="forms/validation.html") Form validation
-
-			.span3-md.span6-sm
-				h3#Modules Modules
-				ul
-					li
-						a(href="modules/callout.html") Callout
-					li
-						a(href="modules/revealable.html") Revealable
-					li
-						a(href="modules/charts.html") Charts
-					li
-						a(href="modules/section-notice.html") Section Notices
-					li
-						a(href="modules/toolbar.html") Content toolbar
-					li
-						a(href="modules/cookie-monster.html") Cookie Monster
-					li
-						a(href="modules/browser-warning.html") Browser warning
-					li
-						a(href="modules/sticky.html") Sticky box
-
-			.span3-md.span6-sm
-				h3#Branding Branding
-				ul
-					li
-						a(href="branding/brand-icons.html") Brand icons
-					li
-						a(href="branding/speech-line.html") Speech line
-
-
-	.articleContent
-		.newrow
-			.span8
-				p.u-lede This is a guide to demonstrate elements such as layout, typography, forms, buttons and icons.
-
-		.newrow
-			.span12
-				h2#Principles Digital principles
-				ul
-					li
-						a(href="principles.html") Digital principles
-		.newrow
-			.span4-sm
-				h2#Styles Styles
-				ul
-					li
-						a(href="styles/typography.html") Typography
-					li
-						a(href="styles/colours.html") Colours
-					li
-						a(href="styles/icons.html") Icons
-					li
-						a(href="styles/tables.html") Tables
-					//li
-						a(href="new-grid.html") New grid layout
-				h2#Forms Forms
+				h3#Forms(style="margin-top: 0;") Forms
 				ul
 					li
 						a(href="forms/buttons.html") Buttons
@@ -129,8 +62,8 @@ block content
 					li
 						a(href="forms/clipboard.html") Copy to clipboard
 
-			.span4-sm
-				h2#Modules Modules
+			.span3-md.span6-sm
+				h3#Modules(style="margin-top: 0;") Modules
 				ul
 					li
 						a(href="modules/callout.html") Callout
@@ -156,8 +89,9 @@ block content
 						a(href="modules/overlay.html") Modal/Overlay
 					//li
 						a(href="modules/reference.html") Reference tool
-			.span4-sm
-				h2#Branding Branding
+
+			.span3-md.span6-sm
+				h3#Branding(style="margin-top: 0;") Branding
 				ul
 					li
 						a(href="branding/brand-icons.html") Brand icons
