add: Added HTML for 'copied' popup

--- a/libs/jade/modules/toolbar.jade
+++ b/libs/jade/modules/toolbar.jade
@@ -40,6 +40,7 @@ block content
 				//button.toolbar-button.a-social-email(href="javascript:emailCurrentPage()", data-track="Email page") Email
 				a.a-social-email(href="javascript:emailCurrentPage()", data-track="Email page") Email
 				a.a-social-copy Copy link
+					.copied Copied!
 		pre
 			code.language-html
 				| &lt;div class="example-box-plain"&gt;
