add: Added HTML for 'copied' popup

--- a/libs/template/sharebar.jade
+++ b/libs/template/sharebar.jade
@@ -7,3 +7,4 @@
 	//button.toolbar-button.a-social-email(href="javascript:emailCurrentPage()", data-track="Email page") Email
 	a.a-social-email(href="javascript:emailCurrentPage()", data-track="Email page") Email
 	a.a-social-copy Copy link
+		.copied Copied!
